@@ -25,11 +25,10 @@ import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.Term;
 import org.apache.lucene.index.Terms;
 import org.apache.lucene.search.BulkScorer;
-import org.apache.lucene.search.DocIdSet;
 import org.apache.lucene.search.Explanation;
-import org.apache.lucene.search.Filter;
 import org.apache.lucene.search.Scorer;
 import org.apache.lucene.search.Weight;
+import org.apache.lucene.search.suggest.BitsProducer;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.IntsRef;
 import org.apache.lucene.util.automaton.Automaton;
@@ -88,19 +87,15 @@ public class CompletionWeight extends Weight {
       throw new IllegalArgumentException(completionQuery.getField() + " is not a SuggestField");
     }
 
-    DocIdSet docIdSet = null;
-    Filter filter = completionQuery.getFilter();
+    BitsProducer filter = completionQuery.getFilter();
+    Bits filteredDocs = null;
     if (filter != null) {
-      docIdSet = filter.getDocIdSet(context, null);
-      if (docIdSet == null || docIdSet.iterator() == null) {
-        // filter matches no docs in current leave
+      filteredDocs = filter.getBits(context);
+      if (filteredDocs.getClass() == Bits.MatchNoBits.class) {
         return null;
-      } else if (docIdSet.bits() == null) {
-        throw new IllegalArgumentException("DocIDSet does not provide random access interface");
       }
     }
-    Bits acceptDocBits = (docIdSet != null) ? docIdSet.bits() : null;
-    return new CompletionScorer(this, suggester, reader, acceptDocBits, filter != null, automaton);
+    return new CompletionScorer(this, suggester, reader, filteredDocs, filter != null, automaton);
   }
 
   /**
